# everything-training

./: .gitignore  README.md  pyproject.toml
src/fastmcp/knowledge_base/: client.py  server.py
src/fastmcp/knowledge_base/notes/: test-note.md
src/fastmcp/simple/: my_client.py
src/federated_learning/: README.md  dataset.py  model.py  train.py
src/mandelbrot/: mandelbrot.py
src/mistral_ocr/: main.ipynb  main.py
src/mistral_ocr/pipeline/: README.md  __init__.py  articles.py  globals_.py  models.py  normalize.py  ocr.py  pipeline.py  run.py  verify.py
src/mistral_ocr/pipeline/tests/: test_pipeline.py
src/python_dataclasses/: experiment.py
src/reduce_list/: naive_reduce_list.py  reduce_list.py
src/sort/: bubble_sort.py  compare_execution_time.py  merge_sort.py  quick_sort.py  revised_bubble_sort.py  selection_sort.py
src/test_langchain/: basic_weather.py  file_system_explorer.py  google_calendar_integratin.py  pyproject.toml
src/torch/lightning/: mnist_ae.py
src/yolo/: yolo_segmentation_bikes.py
tests/reduce_list/: test_naive_reduce_list.py  test_reduce_list.py
tests/sort/: test_bubble_sort.py  test_merge_sort.py  test_quick_sort.py  test_revised_bubble_sort.py  test_selection_sort.py
torch/lightning/: mnist_ae.py
