[project]
name = "venv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "lightning>=2.5.0.post0",
    "pytest>=8.3.4",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
]

[tool.hatch.build.targets.wheel]
packages = ['src/']

[tool.pyright]
include = ["src"]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
