[project]
name = "venv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "lightning>=2.5.0.post0",
    "matplotlib>=3.10.0",
    "pytest>=8.3.4",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "ultralytics>=8.3.59",
]

[tool.hatch.build.targets.wheel]
packages = ['src/']

[tool.pyright]
include = ["src"]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]

[tool.uv.workspace]
members = [
    "src/test_langchain",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
